Replaced apache codec Base64 encoding with built-in Java Base64 encoding