@@ -38,7 +38,6 @@ import net.sf.uadetector.ReadableUserAgent;
 import net.sf.uadetector.UserAgentStringParser;
 import net.sf.uadetector.service.UADetectorServiceFactory;
 
-import org.apache.commons.codec.binary.Base64;
 import org.apache.http.Header;
 import org.apache.http.HeaderElement;
 import org.apache.http.HttpClientConnection;
@@ -110,6 +109,8 @@ import org.slf4j.LoggerFactory;
 import org.xbill.DNS.Cache;
 import org.xbill.DNS.DClass;
 import net.lightbody.bmp.proxy.jetty.util.MultiMap;
+
+import javax.xml.bind.DatatypeConverter;
 
 /**
  * WARN : Require zlib > 1.1.4 (deflate support)
@@ -1106,7 +1107,7 @@ public class BrowserMobHttpClient {
 	}
 
 	private void setBinaryContentOfEntry(HarEntry entry, ByteArrayOutputStream copy) {
-        entry.getResponse().getContent().setText(Base64.encodeBase64String(copy.toByteArray()));
+        entry.getResponse().getContent().setText(DatatypeConverter.printBase64Binary(copy.toByteArray()));
 		entry.getResponse().getContent().setEncoding("base64");
 	}
 
